<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_contest_participation_history">Contest participation history</string>
    <string name="account_create">Create account</string>
    <string name="account_create_message">Create your free FlipaClip account to join in all the contest fun!</string>
    <string name="account_create_message_ai_audio">"To access AI Audio,
please create your free account!"</string>
    <string name="account_create_message_magic_cut">"To access Magic Cut,
please create your free account!"</string>
    <string name="account_create_message_submit_entry">To submit your animation please sign in or create your free FlipaClip account!</string>
    <string name="account_delete_account">Delete Account</string>
    <string name="account_delete_confirmation_failed">Unable to remove user account!</string>
    <string name="account_delete_confirmation_warning">This will permanently remove your account. All your data, including your contest participation history and contest submissions will be deleted.</string>
    <string name="account_delete_forgot_password_button">Forgot your password</string>
    <string name="account_delete_password_title">To delete your account, please confirm your password.</string>
    <string name="account_edit_toolbar_title">Account information</string>
    <string name="account_error_auth_failed">Failed to authenticate user!</string>
    <string name="account_error_auth_success_no_account">User account not found!</string>
    <string name="account_error_credentials_do_not_match">The supplied credentials do not correspond to the previously signed in user.</string>
    <string name="account_error_email_account_not_found">An account with the entered email does not exist. Please check that you have typed your email correctly.</string>
    <string name="account_error_invalid_user_data">Invalid user data! e%d</string>
    <string name="account_error_read_account_failed">Unable to read user account!</string>
    <string name="account_error_registration_failed">Sorry, we are not able to process your registration.</string>
    <string name="account_error_social_network_account_not_found">An account associated with %s does not exist.</string>
    <string name="account_error_user_under_13">You must be 13 or older to create an account</string>
    <string name="account_error_verify_user_data_failed">Failed to verify user data!</string>
    <string name="account_information">Account information</string>
    <string name="account_login_and_security">Login &amp; Security</string>
    <string name="account_login_create_account_action">Create an account. Sign up</string>
    <string name="account_login_description">Continue your animation journey!</string>
    <string name="account_login_email_action">Continue with email</string>
    <string name="account_login_google_action">Continue with Google</string>
    <string name="account_login_title">Sign in to your account</string>
    <string name="account_option_OR">OR</string>
    <string name="account_password_current_hint">Current password</string>
    <string name="account_password_new_hint">New password</string>
    <string name="account_password_reset_action">Reset password</string>
    <string name="account_password_reset_message">Enter your email below to receive your password reset instructions.</string>
    <string name="account_password_reset_success">"Email sent!
Check your email and try signing in again!"</string>
    <string name="account_password_update_action">Update password</string>
    <string name="account_password_update_message">Update password</string>
    <string name="account_password_update_success">Account password has been updated!</string>
    <string name="account_profile">Profile</string>
    <string name="account_resend_verification_email">RESEND VERIFICATION EMAIL</string>
    <string name="account_sign_in">Sign In</string>
    <string name="account_sign_out">Sign Out</string>
    <string name="account_signin">Sign in</string>
    <string name="account_signin_email">Sign in with email</string>
    <string name="account_signin_email_input_hint">Email address</string>
    <string name="account_signin_email_message">Welcome back!</string>
    <string name="account_signin_facebook">Sign in with Facebook</string>
    <string name="account_signin_forgot_password"><u>Forgot password?</u></string>
    <string name="account_signin_google">Sign in with Google</string>
    <string name="account_signin_message">"Welcome back!
Please choose how you want to sign in."</string>
    <string name="account_signin_password_input_hint">Password</string>
    <string name="account_signin_tip_no_account">"Don't have an account?"</string>
    <string name="account_signup">Sign up</string>
    <string name="account_signup_email">Sign up with email</string>
    <string name="account_signup_facebook">Sign up with Facebook</string>
    <string name="account_signup_google">Sign up with Google</string>
    <string name="account_signup_message">"Hi there!
Please choose how you want to sign up."</string>
    <string name="account_signup_tip_have_account">Have an account?</string>
    <string name="account_third_party_sign_in_title">To delete your account, please sign in to confirm this action.</string>
    <string name="account_toolbar_title">FlipaClip account</string>
    <string name="account_update_password">Update password</string>
    <string name="account_verify_email_message">Please check your inbox at %s to verify and activate this account.</string>
    <string name="account_verify_email_sent">Email sent!</string>
    <string name="account_wizard_birthday_input_hint">Tap to set birthday</string>
    <string name="account_wizard_birthday_message">"Almost done!
When's your birthday?"</string>
    <string name="account_wizard_country_input_hint">Tap to set country</string>
    <string name="account_wizard_country_message">"Last question…
What country do you live in?"</string>
    <string name="account_wizard_email_input_hint">Email address</string>
    <string name="account_wizard_email_message">"Great!
Please enter your email address."</string>
    <string name="account_wizard_firstname_input_hint">First name</string>
    <string name="account_wizard_firstname_message">"Awesome!
What should we call you?"</string>
    <string name="account_wizard_lastname_input_hint">Last name</string>
    <string name="account_wizard_lastname_message">and your last name is…</string>
    <string name="account_wizard_password_input_hint">Password</string>
    <string name="account_wizard_password_message">"Now choose a good password but don't make it so hard you'll forget 😛"</string>
    <string name="action_create_project">CREATE PROJECT</string>
    <string name="action_make_movie">MAKE MOVIE</string>
    <string name="action_save_changes">SAVE CHANGES</string>
    <string name="action_save_to_photos">Save to Photos</string>
    <string name="action_share">SHARE</string>
    <string name="action_share_more">More</string>
    <string name="action_video_watch_now">WATCH NOW</string>
    <string name="ad_mob_ad_badge">Ad</string>
    <string name="add_new_frame_action">Add new frame</string>
    <string name="ai_audio_action_generate">Generate audio</string>
    <string name="ai_audio_action_next">Next</string>
    <string name="ai_audio_add_text">Add your text</string>
    <string name="content_description_back">Back</string>
    <string name="content_description_blur">Blur</string>
    <string name="content_description_brush">Brush</string>
    <string name="content_description_close">Close</string>
    <string name="content_description_color_opacity">Color and Opacity</string>
    <string name="content_description_copy">Copy</string>
    <string name="content_description_delete">Delete</string>
    <string name="content_description_duplicate">Duplicate</string>
    <string name="content_description_eraser">Eraser</string>
    <string name="content_description_fill">Color Fill</string>
    <string name="content_description_lasso">Lasso</string>
    <string name="content_description_more">More</string>
    <string name="content_description_paste">Paste</string>
    <string name="content_description_redo">Redo</string>
    <string name="content_description_rename">Rename</string>
    <string name="content_description_ruler">Ruler</string>
    <string name="content_description_scale_to_fit">Scale To Fit</string>
    <string name="content_description_share">Share</string>
    <string name="content_description_size">Size</string>
    <string name="content_description_slice">Slice</string>
    <string name="content_description_text">Text</string>
    <string name="content_description_undo">Undo</string>
    <string name="menu_tooltip_add_frame_after">Add frame after</string>
    <string name="menu_tooltip_add_frame_before">Add frame before</string>
    <string name="menu_tooltip_copy_frame">Copy frame</string>
    <string name="menu_tooltip_paste_after_frame">Paste after</string>
    <string name="menu_tooltip_paste_before_frame">Paste before</string>
    <string name="menu_tooltip_remove_frame">Remove frame</string>
    <string name="one_trust_banner_cookie_settings">Cookies Settings</string>
    <string name="one_trust_banner_partner_list">List of Partner(Vendors)</string>
    <string name="one_trust_banner_reject_all">Reject All</string>
    <string name="one_trust_preference_center_allow_all">Allow All</string>
    <string name="one_trust_preference_center_allow_all_consent">Allow All Consent</string>
    <string name="one_trust_preference_center_confirm_my_choices">Confirm My Choices</string>
    <string name="one_trust_preference_center_consent">Consent</string>
    <string name="one_trust_preference_center_legitimate_interest">"Legitimate 
Interest"</string>
    <string name="one_trust_preference_center_manage_preferences">Manage Preferences</string>
    <string name="one_trust_preference_center_more_info">More Info</string>
    <string name="one_trust_privacy_preference_center">Privacy Preference Center</string>
</resources>