<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_duplicate" android:id="@id/action_clone" android:visible="true" android:title="Duplicate" android:tooltipText="@string/content_description_duplicate" />
    <item android:icon="@drawable/ic_slice" android:id="@id/action_slice" android:visible="true" android:title="Slice clip" android:tooltipText="@string/content_description_slice" />
    <item android:icon="@drawable/ic_delete" android:id="@id/action_delete" android:visible="true" android:title="Delete clip" android:tooltipText="@string/content_description_delete" />
    <item android:icon="@drawable/ic_rename" android:id="@id/action_rename" android:visible="true" android:title="Rename clip" android:tooltipText="@string/content_description_rename" />
</menu>