<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:id="@id/pc_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.vblast.core.view.widget.FcImageButton android:id="@id/close_pc" android:padding="@dimen/close_button_padding" android:layout_width="wrap_content" android:layout_height="40.0dip" android:contentDescription="@string/content_description_close" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_back" />
    <androidx.core.widget.NestedScrollView android:paddingBottom="@dimen/item_vertical_margin" android:layout_width="0.0dip" android:layout_height="0.0dip" android:requiresFadingEdge="vertical" app:layout_constraintBottom_toTopOf="@id/footer_layout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/close_pc" app:layout_constraintWidth_max="@dimen/layout_max_width">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <View android:id="@id/view1" android:background="?fcColorDivider" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_alignParentTop="true" />
            <TextView android:textAppearance="@style/TextAppearance.Fc.Message" android:gravity="center" android:id="@id/pc_title" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/one_trust_banner_cookie_settings" android:layout_below="@id/view1" android:paddingVertical="15.0dip" />
            <View android:id="@id/view2" android:background="?fcColorDivider" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="5.0dip" android:layout_below="@id/pc_title" />
            <TextView android:textAppearance="@style/TextAppearance.Fc.Message" android:id="@id/main_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="10.0dip" android:text="@string/one_trust_privacy_preference_center" android:layout_alignParentTop="true" />
            <TextView android:textAppearance="@style/TextAppearance.Fc.Section.Accent.Secondary" android:id="@id/main_info_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:minLines="4" android:layout_below="@id/main_text" />
            <View android:id="@id/view3" android:background="?fcColorDivider" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="5.0dip" android:layout_below="@id/main_info_text" />
            <TextView android:textAppearance="@style/TextAppearance.Fc.Section.Accent.Secondary" android:textColor="?fcColorAccent" android:id="@id/cookie_policy_link" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/one_trust_preference_center_more_info" android:layout_below="@id/main_info_text" />
            <LinearLayout android:orientation="horizontal" android:id="@id/allow_all_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/cookie_policy_link">
                <com.google.android.material.button.MaterialButton android:id="@id/btn_allow_all" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/one_trust_preference_center_allow_all" android:layout_weight="1.0" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" style="@style/Widget.Fc.Button.Primary" />
                <com.google.android.material.button.MaterialButton android:id="@id/btn_reject_PC" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="60.0dip" android:text="@string/one_trust_banner_reject_all" android:layout_weight="1.0" android:layout_marginStart="10.0dip" style="@style/Widget.Fc.Button.Primary" />
            </LinearLayout>
            <View android:id="@id/view4" android:background="?fcColorDivider" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="5.0dip" android:layout_below="@id/allow_all_layout" />
            <TextView android:textAppearance="@style/TextAppearance.Fc.Message" android:textSize="18.0sp" android:textColor="?fcColorAccent" android:id="@id/view_all_vendors" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/one_trust_banner_partner_list" android:layout_below="@id/view4" />
            <View android:id="@id/view5" android:background="?fcColorDivider" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="5.0dip" android:layout_below="@id/view_all_vendors" />
            <TextView android:textAppearance="@style/TextAppearance.Fc.Message" android:textSize="18.0sp" android:textStyle="bold" android:id="@id/preferences_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/one_trust_preference_center_manage_preferences" android:layout_below="@id/view5" />
            <TextView android:textAppearance="@style/TextAppearance.Fc.Message" android:textSize="14.0sp" android:gravity="center" android:id="@id/pc_leg_int_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/one_trust_preference_center_legitimate_interest" android:lines="2" android:layout_below="@id/allow_all_title" android:layout_marginEnd="70.0dip" android:layout_alignParentEnd="true" />
            <TextView android:textAppearance="@style/TextAppearance.Fc.Section.Accent.Secondary" android:textSize="14.0sp" android:id="@id/pc_consent_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/one_trust_preference_center_consent" android:layout_below="@id/allow_all_title" android:layout_alignParentEnd="true" />
            <TextView android:textAppearance="@style/TextAppearance.Fc.Message" android:textSize="18.0sp" android:textStyle="bold" android:gravity="start" android:id="@id/allow_all_title" android:paddingBottom="20.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/one_trust_preference_center_allow_all_consent" android:layout_below="@id/preferences_header" />
            <androidx.appcompat.widget.SwitchCompat android:textAppearance="@style/TextAppearance.Fc.Section.Accent.Secondary" android:id="@id/allow_all_toggle" android:paddingBottom="20.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/preferences_header" android:layout_alignParentRight="true" />
            <androidx.recyclerview.widget.RecyclerView android:id="@id/preferences_list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/pc_leg_int_text" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
    <RelativeLayout android:id="@id/footer_layout" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintWidth_max="@dimen/layout_max_width">
        <com.google.android.material.button.MaterialButton android:id="@id/btn_confirm_choices" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/item_vertical_margin" android:text="@string/one_trust_preference_center_confirm_my_choices" style="@style/Widget.Fc.Button.Primary" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>