<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layoutDirection="locale"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.vblast.core.view.widget.FcImageButton android:id="@id/actionBack" android:background="?android:selectableItemBackground" android:layout_width="@dimen/stage_toolbar_item_width" android:layout_height="@dimen/stage_toolbar_item_height" android:scaleType="centerInside" android:contentDescription="@string/content_description_back" android:layout_marginStart="@dimen/stage_toolbar_edge_padding" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_stage_back" />
    <com.vblast.core.view.widget.FcImageButton android:id="@id/actionMore" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="@dimen/stage_toolbar_item_height" android:scaleType="centerInside" android:contentDescription="@string/content_description_more" android:layout_marginEnd="@dimen/stage_toolbar_edge_padding" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/actionMakeMovie" app:layout_constraintTop_toTopOf="parent" app:layout_constraintWidth_max="@dimen/stage_toolbar_item_width" app:srcCompat="@drawable/ic_stage_more" />
    <com.vblast.core.view.widget.FcImageButton android:id="@id/actionMakeMovie" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="@dimen/stage_toolbar_item_height" android:scaleType="centerInside" android:contentDescription="@string/content_description_share" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/actionMore" app:layout_constraintStart_toEndOf="@id/actionScaleToFit" app:layout_constraintTop_toTopOf="parent" app:layout_constraintWidth_max="@dimen/stage_toolbar_item_width" app:srcCompat="@drawable/ic_stage_make_movie" />
    <com.vblast.core.view.widget.FcImageButton android:id="@id/actionScaleToFit" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="@dimen/stage_toolbar_item_height" android:scaleType="centerInside" android:contentDescription="@string/content_description_scale_to_fit" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/actionMakeMovie" app:layout_constraintStart_toEndOf="@id/actionRedo" app:layout_constraintTop_toTopOf="parent" app:layout_constraintWidth_max="@dimen/stage_toolbar_item_width" app:srcCompat="@drawable/ic_stage_scale_to_fit" />
    <com.vblast.core.view.widget.FcImageButton android:id="@id/actionRedo" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="@dimen/stage_toolbar_item_height" android:scaleType="centerInside" android:contentDescription="@string/content_description_redo" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/actionScaleToFit" app:layout_constraintStart_toEndOf="@id/actionUndo" app:layout_constraintTop_toTopOf="parent" app:layout_constraintWidth_max="@dimen/stage_toolbar_item_width" app:srcCompat="@drawable/ic_stage_redo" />
    <com.vblast.core.view.widget.FcImageButton android:id="@id/actionUndo" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="@dimen/stage_toolbar_item_height" android:scaleType="centerInside" android:contentDescription="@string/content_description_undo" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/actionRedo" app:layout_constraintStart_toEndOf="@id/actionPaste" app:layout_constraintTop_toTopOf="parent" app:layout_constraintWidth_max="@dimen/stage_toolbar_item_width" app:srcCompat="@drawable/ic_stage_undo" />
    <com.vblast.core.view.widget.FcImageButton android:id="@id/actionPaste" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="@dimen/stage_toolbar_item_height" android:scaleType="centerInside" android:contentDescription="@string/content_description_paste" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/actionUndo" app:layout_constraintStart_toEndOf="@id/actionCopy" app:layout_constraintTop_toTopOf="parent" app:layout_constraintWidth_max="@dimen/stage_toolbar_item_width" app:srcCompat="@drawable/ic_stage_paste" />
    <com.vblast.core.view.widget.FcImageButton android:id="@id/actionCopy" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="@dimen/stage_toolbar_item_height" android:scaleType="centerInside" android:contentDescription="@string/content_description_copy" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/actionPaste" app:layout_constraintStart_toEndOf="@id/actionRuler" app:layout_constraintTop_toTopOf="parent" app:layout_constraintWidth_max="@dimen/stage_toolbar_item_width" app:srcCompat="@drawable/ic_stage_copy" />
    <com.vblast.core.view.widget.FcImageButton android:id="@id/actionRuler" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="@dimen/stage_toolbar_item_height" android:scaleType="centerInside" android:contentDescription="@string/content_description_ruler" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/actionCopy" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toEndOf="@id/actionBack" app:layout_constraintTop_toTopOf="parent" app:layout_constraintWidth_max="@dimen/stage_toolbar_item_width" app:srcCompat="@drawable/btn_stage_ruler" />
</androidx.constraintlayout.widget.ConstraintLayout>