<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.vblast.core.view.widget.FcImageButton android:id="@id/back" android:background="@drawable/btn_stage_tool_back" android:layout_width="0.0dip" android:layout_height="0.0dip" android:scaleType="center" android:contentDescription="@string/content_description_back" app:layout_constraintBottom_toTopOf="@id/quarterGuideline" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_stage_tools_menu_back" app:tint="?fcColorAccentIconTint" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/quarterGuideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.2" />
    <com.vblast.core.view.widget.FcImageButton android:id="@id/brush" android:layout_width="0.0dip" android:layout_height="48.0dip" android:scaleType="center" android:contentDescription="@string/content_description_brush" app:layout_constraintBottom_toTopOf="@id/toolSize" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/back" />
    <com.vblast.feature_stage.presentation.view.sliderbutton.SliderButton android:id="@id/toolSize" android:padding="4.0dip" android:layout_width="40.0dip" android:layout_height="40.0dip" android:contentDescription="@string/content_description_size" app:fcControlBackground="@drawable/btn_stage_tools_menu_circle_slider_button" app:layout_constraintBottom_toTopOf="@id/toolBlur" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/brush" />
    <com.vblast.feature_stage.presentation.view.sliderbutton.SliderButton android:id="@id/toolBlur" android:padding="4.0dip" android:visibility="gone" android:layout_width="40.0dip" android:layout_height="40.0dip" android:contentDescription="@string/content_description_blur" app:fcControlBackground="@drawable/btn_stage_tools_menu_circle_slider_button" app:layout_constraintBottom_toTopOf="@id/toolAlpha" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/toolSize" />
    <com.vblast.feature_stage.presentation.view.sliderbutton.SliderButton android:id="@id/toolAlpha" android:padding="4.0dip" android:layout_width="40.0dip" android:layout_height="40.0dip" android:contentDescription="@string/content_description_color_opacity" app:fcControlBackground="@drawable/btn_stage_tools_menu_square_slider_button" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/toolBlur" />
</androidx.constraintlayout.widget.ConstraintLayout>