<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="?fcColorStageToolsBackground" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.vblast.core.view.widget.FcImageButton android:id="@id/brushTool" android:background="@drawable/btn_stage_tool_item_selector" android:layout_width="0.0dip" android:layout_height="0.0dip" android:scaleType="center" android:contentDescription="@string/content_description_brush" app:layout_constraintBottom_toTopOf="@id/eraserTool" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_brush" />
    <com.vblast.core.view.widget.FcImageButton android:id="@id/eraserTool" android:background="@drawable/btn_stage_tool_item_selector" android:layout_width="0.0dip" android:layout_height="0.0dip" android:scaleType="center" android:contentDescription="@string/content_description_eraser" app:layout_constraintBottom_toTopOf="@id/lassoTool" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/brushTool" app:srcCompat="@drawable/ic_stage_tools_menu_eraser" app:tint="@color/stage_tools_menu_icon_tint" />
    <com.vblast.core.view.widget.FcImageButton android:id="@id/lassoTool" android:background="@drawable/btn_stage_tool_item_selector" android:layout_width="0.0dip" android:layout_height="0.0dip" android:scaleType="center" android:contentDescription="@string/content_description_lasso" app:layout_constraintBottom_toTopOf="@id/floodFillTool" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/eraserTool" app:srcCompat="@drawable/ic_stage_tools_menu_lasso" app:tint="@color/stage_tools_menu_icon_tint" />
    <com.vblast.core.view.widget.FcImageButton android:id="@id/floodFillTool" android:background="@drawable/btn_stage_tool_item_selector" android:layout_width="0.0dip" android:layout_height="0.0dip" android:scaleType="center" android:contentDescription="@string/content_description_fill" app:layout_constraintBottom_toTopOf="@id/textTool" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/lassoTool" app:srcCompat="@drawable/ic_stage_tools_menu_flood_fill" app:tint="@color/stage_tools_menu_icon_tint" />
    <ImageButton android:id="@id/textTool" android:background="@drawable/btn_stage_tool_item_selector" android:layout_width="0.0dip" android:layout_height="0.0dip" android:scaleType="center" android:contentDescription="@string/content_description_text" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/floodFillTool" app:srcCompat="@drawable/ic_stage_tools_menu_text" app:tint="@color/stage_tools_menu_icon_tint" />
</androidx.constraintlayout.widget.ConstraintLayout>